tests/fixtures/invalid/int_bitxor_str.py
# Cannot bitwise XOR Int and Str
x: int = 1 ^ "hello"
